# learn-digital-image-processing-4th-edition

./: .gitignore  CMakeLists.txt  DEV.md  README.md
include/algorithms/: bilinear_interp.hpp  bilinear_zoom.hpp  connectivity.hpp  downsample.hpp  least_squares.hpp  nearest_neighbor_zoom.hpp  quantize.hpp  rotate.hpp  set_logical_ops.hpp  spatial_ops.hpp
include/core/: basic_types.hpp  core.hpp  image.hpp  image_loader.hpp  matrix.hpp  vector_types.hpp
source/algorithms/: bilinear_interp.cpp  bilinear_zoom.cpp  connectivity.cpp  downsample.cpp  least_squares.cpp  nearest_neighbor_zoom.cpp  quantize.cpp  rotate.cpp  set_logical_ops.cpp  spatial_ops.cpp
source/chapter02/: data_structure_demo.cpp  modular_demo.cpp  nearest_neighbor_zoom.cpp
source/common/: stb_image_impl.cpp
source/examples/: algorithm_demo.cpp  test_connectivity.cpp  test_downsample.cpp  test_invert_image.cpp  test_least_squares.cpp  test_m_connectivity.cpp  test_memory_layout.cpp  test_nearest_neighbor_zoom.cpp  test_quantize.cpp  test_rotate.cpp  test_set_logical_ops.cpp  test_zoom_algorithms.cpp
